// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/exam/question when invalid state should render component 1`] = `
Array [
  <header
    className="sc-cMljjf kqTkNp"
  >
    <div
      className="sc-htoDjs kcwXek"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <i
        className="material-icons sc-jDwBTQ elBhsq"
        color="#fff"
        data-test="back"
        onClick={[Function]}
      >
        arrow_back
      </i>
    </div>
    <h1
      className="sc-jAaTju gRAIlK"
    >
      百人一首 - 腕試し -
    </h1>
  </header>,
  <div
    className="sc-csuQGl ezwIwo"
  >
    <div
      className="sc-hzDkRC hNxcZV"
    >
      <p
        className="sc-jhAzac kjeLmD"
      >
        不正な遷移を行いました。前の画面からやり直してください。
      </p>
    </div>
  </div>,
]
`;

exports[`/exam/question when valid state should render component 1`] = `
Array [
  <header
    className="sc-cMljjf kqTkNp"
  >
    <div
      className="sc-htoDjs kcwXek"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <i
        className="material-icons sc-jDwBTQ elBhsq"
        color="#fff"
        data-test="back"
        onClick={[Function]}
      >
        arrow_back
      </i>
    </div>
    <h1
      className="sc-jAaTju gRAIlK"
    >
      百人一首 - 腕試し -
    </h1>
  </header>,
  <div
    className="sc-csuQGl ezwIwo"
  >
    <div
      className="sc-fjdhpX fNSJFm"
    >
      <div
        className="sc-jzJRlG gGPUdI"
      >
        <div
          className="sc-kAzzGY hmbMrr"
        >
          1
           / 
          100
        </div>
        <div
          className="sc-bxivhb ivwqSq"
          style={
            Object {
              "margin": "auto",
            }
          }
        >
          <div
            className="sc-ifAKCX bKpGVQ"
          >
            <div
              className="sc-EHOje hgQItU"
            >
              <span
                className="sc-htpNat hRSTEw"
                onAnimationEnd={[Function]}
              >
                初
              </span>
              <span>
                　
              </span>
            </div>
            <div
              className="sc-EHOje sc-bZQynM eZymYX"
            >
              <span>
                　
              </span>
              <span>
                　
              </span>
            </div>
            <div
              className="sc-EHOje sc-gzVnrw gddTfW"
            >
              <span>
                　
              </span>
              <span>
                　
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-cSHVUG iDZpAS"
      >
        <div
          className="sc-htoDjs kcwXek"
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="sc-dnqmqq BFlSi"
            color="#fff"
            onClick={[Function]}
            style={
              Object {
                "margin": "8px",
                "opacity": 1,
              }
            }
          >
            <div
              className="sc-iwsKbI csWNzc"
            >
              <div
                className="sc-gZMcBi efbCZY"
              >
                よんく
              </div>
              <div
                className="sc-gZMcBi sc-gqjmRU OeYjl"
              >
                ごく
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-htoDjs kcwXek"
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="sc-dnqmqq BFlSi"
            color="#fff"
            onClick={[Function]}
            style={
              Object {
                "margin": "8px",
                "opacity": 1,
              }
            }
          >
            <div
              className="sc-iwsKbI csWNzc"
            >
              <div
                className="sc-gZMcBi efbCZY"
              >
                よんく
              </div>
              <div
                className="sc-gZMcBi sc-gqjmRU OeYjl"
              >
                ごく
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-htoDjs kcwXek"
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="sc-dnqmqq BFlSi"
            color="#fff"
            onClick={[Function]}
            style={
              Object {
                "margin": "8px",
                "opacity": 1,
              }
            }
          >
            <div
              className="sc-iwsKbI csWNzc"
            >
              <div
                className="sc-gZMcBi efbCZY"
              >
                よんく
              </div>
              <div
                className="sc-gZMcBi sc-gqjmRU OeYjl"
              >
                ごく
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-htoDjs kcwXek"
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="sc-dnqmqq BFlSi"
            color="#fff"
            onClick={[Function]}
            style={
              Object {
                "margin": "8px",
                "opacity": 1,
              }
            }
          >
            <div
              className="sc-iwsKbI csWNzc"
            >
              <div
                className="sc-gZMcBi efbCZY"
              >
                よんく
              </div>
              <div
                className="sc-gZMcBi sc-gqjmRU OeYjl"
              >
                ごく
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
